@@ -1,0 +1,38 @@
+/*
+ * wzdftpd - a modular and cool ftp server
+ * Copyright (C) 2002-2003  Pierre Chifflier
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ *
+ * As a special exemption, Pierre Chifflier
+ * and other respective copyright holders give permission to link this program
+ * with OpenSSL, and distribute the resulting executable, without including
+ * the source code for OpenSSL in the source distribution.
+ */
+
+#ifndef __WZD_VARS__
+#define __WZD_VARS__
+
+/** fills data with varname content, max size: datalength
+ * @returns 0 if ok, 1 if an error occured
+ */
+int vars_get(const char *varname, void *data, unsigned int datalength, wzd_config_t * config);
+
+/** change varname with data contents size of data is datalength
+ * @returns 0 if ok, 1 if an error occured
+ */
+int vars_set(const char *varname, void *data, unsigned int datalength, wzd_config_t * config);
+
+#endif /* __WZD_VARS__ */
